fix: css min-height for main-content work on firefox and safari

--- a/src/styles/main-content.scss
+++ b/src/styles/main-content.scss
@@ -1,5 +1,5 @@
 .main-content {
-  height: 100%;
+  min-height: 100%;
   min-width: 375px;
   margin-left: var(--main-content-margin-left);
   transition: 0.3s;
